--- a/.poggit.yml
+++ b/.poggit.yml
@@ -5,4 +5,9 @@ branches:
 projects:
   SellUI:
     path: SellUI/
+    libs:
+      - src: Vecnavium/FormsUI/libFormsUI
+        version: ^1.1.3
+    lint:
+      phpstan: false
 ...
